--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title GRO
+    title gro
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -17,10 +17,7 @@ head
     link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000")
     //- link(rel="stylesheet" href="http://cdn.dhtmlx.com/edge/dhtmlx.css" type="text/css") 
     script(src='https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js')
-    script(src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js")
     script(src='https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.4/dist/semantic.min.js')
-    script(src='https://cdn.jsdelivr.net/jsbarcode/3.6.0/JsBarcode.all.min.js')
-    // script(src="http://cdn.dhtmlx.com/edge/dhtmlx.js" type="text/javascript") */
     //- /* script(src="https://js.stripe.com/v3/") */
 
 
@@ -58,5 +55,5 @@ template(name='mlayout')
 
 template(name='not_found')
     .ui.text.container
-        .ui.center.aligned.header Not Found
-        a.ui.button(href="/healthclub") Check In
+        .ui.center.aligned.header not found
+        a.ui.button(href="/") home
