--- a/client/home.jade
+++ b/client/home.jade
@@ -8,9 +8,9 @@ template(name='home')
             .column
                 a(href="/m/#{slug}")
                     .ui.segment.home_segment.set_model
-                        .ui.grey.header 
-                            i.icon(class=icon)
-                            //- +i name=icon
+                        .ui.header 
+                            //- i.icon(class=icon)
+                            +i name=icon
                             |#{title}
 
 
