--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,7 +1,7 @@
 template(name='nav')
     unless is_frontdesk
         //- .ui.borderless.attached.big.inverted.menu.topnav
-        .ui.attached.borderless.inverted.big.menu.topnav
+        .ui.attached.borderless.inverted.big.menu.topnav.blue
             //- a.toggle_sidebar.icon.item.sidebar_on
             //-     i.large.sidebar.icon
             if is_loading
@@ -23,30 +23,20 @@ template(name='nav')
                         .mobile.hidden &nbsp; buildings
                 //- a.header.icon.set_units.item(href='/m/unit' class="{{isActivePath '/m/unit'}}")
                 //-     +i name='room'    
-                if is_staff
-                    a.icon.item(href='/staff' class="{{isActivePath '/staff'}}")
-                        +i name='employee-card' classes='ui avatar image'
-                        //- i.shield.large.icon
-                        .mobile.hidden &nbsp; staff
-                    a.icon.item(href='/users' class="{{isActivePath '/users'}}")
-                        //- i.users.large.icon
-                        +i name='groups' classes='ui avatar image'
-                        .mobile.hidden &nbsp; users
-                if is_user        
-                    //- a.item(href='/meals' class="{{isActivePath '/meals'}}" title='meals')
-                    //-     +i name='food'
-                    //-     .mobile.hidden &nbsp; meals
-                    //- a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
-                    //-     //- i.dashboard.icon
-                    //-     +i name='dashboard'
-                    //-     .mobile.hidden &nbsp; dashboard
-                    //- a.item(href='/shop' class="{{isActivePath '/shop'}}")
-                    //-     i.shop.icon
-                    //-     .mobile.hidden &nbsp; shop
-                    //- a.icon.item(href='/games' class="{{isActivePath '/games'}}")
-                    //-     //- +i name='shop'
-                    //-     i.dice.icon
-                    //-     .mobile.hidden &nbsp; games
+                a.icon.item(href='/users' class="{{isActivePath '/users'}}")
+                    //- i.users.large.icon
+                    +i name='groups' classes='ui avatar image'
+                    .mobile.hidden &nbsp; users
+                a.item(href='/meals' class="{{isActivePath '/meals'}}" title='meals')
+                    +i name='food'
+                    .mobile.hidden &nbsp; meals
+                a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
+                    //- i.dashboard.icon
+                    +i name='dashboard'
+                    .mobile.hidden &nbsp; dashboard
+                a.item(href='/shop' class="{{isActivePath '/shop'}}")
+                    i.shop.icon
+                    .mobile.hidden &nbsp; shop
                 if is_admin
                     a.icon.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}")
                         +i name='shop'
@@ -75,11 +65,6 @@ template(name='nav')
                     
                 //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
                 //-     +i name='shop'
-                if is_staff
-                    a.icon.item(href='/healthclub' class="{{isActivePath '/healthclub'}}")
-                        +i name='treadmill' classes='ui avatar image'
-                        //- i.clinic.medical.large.icon
-                        .mobile.hidden &nbsp; kiosk
             .right.menu
                 if is_admin
                     a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
@@ -98,57 +83,51 @@ template(name='nav')
                         //-         each notifications
                         //-             .ui.button #{text}
                         if is_user
-                            //- a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
-                            //-     //- +i name='new-post'
-                            //-     i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
-                            //- a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
-                            //-     +i name='cashbook'
-                            //- a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
-                            //-     //- +i name='ledger'
-                            //-     i.list.icon
-                            //- if is_admin
-                            //-     a.icon.item(href="/transactions" class="{{isActivePath '/transactions'}}" title='transactions')
-                            //-         //- +i name='cashbook'
-                            //-         i.user.sheild.icon
-                            //- a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
-                            //-     //- +i name='chat'
-                            //-     i.chat.icon
-                            //- a.item(href="/credit" class="{{isActivePath '/credit'}}" title="#{currentUser.credit} credit")
-                            //-      //- +i name='wallet'
-                            //-      i.wallet.icon
-                            //-      |#{currentUser.credit}
+                            a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
+                                +i name='new-post'
+                                //- i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                            a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
+                                +i name='cashbook'
+                            a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
+                                +i name='ledger'
+                                //- i.list.icon
+                            if is_admin
+                                a.icon.item(href="/transactions" class="{{isActivePath '/transactions'}}" title='transactions')
+                                    +i name='cashbook'
+                                    //- i.user.sheild.icon
+                            a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
+                                +i name='chat'
+                                //- i.chat.icon
+                            a.item(href="/credit" class="{{isActivePath '/credit'}}" title="#{currentUser.credit} credit")
+                                 +i name='wallet'
+                                 //- i.wallet.icon
+                                 |#{currentUser.credit}
                             a.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
                                 i.cart.icon
                                 |#{cart_amount}
-                            //- a.icon.item(href="/deliveries" class="{{isActivePath '/deliveries'}}" title='deliveries')
-                            //-     +i name='in-transit'
-                                //- |deliveries
-                            //- a.item(href="/tab" class="{{isActivePath '/tab'}}" title='tab')
-                            //-     //- +i name='shopping-cart'
-                            //-     i.cart.icon
-                            //-     |#{cart_amount}
-                                //- i.chat.large.icon
-                            //- if is_user
-                            //-     a.icon.item(href="/events" class="{{isActivePath '/events'}}")
-                            //-         +i name='calendar'
-                            //-     a.icon.item(href="/groups" class="{{isActivePath '/groups'}}")
-                            //-         +i name='group'
-                            //-     //- i.chat.large.icon
-                        //- if is_admin
-                        //-     a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
-                        //-         +i name='user shield'
+                            a.icon.item(href="/deliveries" class="{{isActivePath '/deliveries'}}" title='deliveries')
+                                +i name='in-transit'
+                                |deliveries
+                            a.item(href="/tab" class="{{isActivePath '/tab'}}" title='tab')
+                                +i name='shopping-cart'
+                                //- i.cart.icon
+                                |#{cart_amount}
+                            if is_user
+                                a.icon.item(href="/events" class="{{isActivePath '/events'}}")
+                                    +i name='calendar'
+                        if is_admin
+                            a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
+                                +i name='user shield'
                         if is_dev
                             a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                                //- +i name='active directory'
-                                i.sitemap.large.icon
-                        unless is_frontdesk
-                            a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
-                                if currentUser.image_id
-                                    img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
-                                else
-                                    +i name='user'
-                                    //- i.user.large.icon
-                                //- | #{currentUser.username}
+                                +i name='active directory'
+                                //- i.sitemap.large.icon
+                        a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
+                            if currentUser.image_id
+                                img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
+                            else
+                                +i name='user'
+                                | #{currentUser.username}
                     if logging_out
                         .item
                             i.large.loading.circle.notch.icon
@@ -174,20 +153,19 @@ template(name='footer')
     .ui.fluid.basic.attached.segment.footer
         .ui.container.stackable.grid
             .eight.wide.column
-                //- with currentUser
-                //-     +textarea_edit key='notes' direct=true
-                //-     form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
-                //-         input(type='hidden', name='cmd', value='_s-xclick')
-                //-         input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
-                //-         <input type="hidden" name="hosted_button_id" value="7SENHECABERS6" />
-                //-         // input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif', border='0', name='submit')
-                //-         //- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-                //-         img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
-                //-         button.ui.large.icon.button(type='submit')
-                //-             //- i.pied.piper.alternate.large.icon
-                //-             |donate
+                with currentUser
+                    +textarea_edit key='notes' direct=true
+                    form(action='https://www.paypal.com/cgi-bin/webscr', method='post', target='_top')
+                        input(type='hidden', name='cmd', value='_s-xclick')
+                        input(type='hidden', name='hosted_button_id', value='AUVHGYNUW5LVE')
+                        <input type="hidden" name="hosted_button_id" value="7SENHECABERS6" />
+                        // input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif', border='0', name='submit')
+                        //- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                        img(alt='', border='0', src='https://www.paypal.com/en_US/i/scr/pixel.gif', width='1', height='1')
+                        button.ui.large.icon.button(type='submit')
+                            //- i.pied.piper.alternate.large.icon
+                            |donate
                 
-                //- +health_club_info
                 if is_dev    
                     with current_user
                         +role_switcher
