--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -15,7 +15,7 @@ template(name='user_edit')
                     +image_edit key='image_id' icon='picture' title='profile image' direct=true
                     if is_admin
                         +password_edit
-                        //- +phone_editor
+                        +phone_editor
                         +username_edit
                     if is_dev
                         with user_from_username_param
@@ -43,70 +43,15 @@ template(name='user_edit')
                                 +text_view key='first_name' label='first name' direct=true
                                 +text_view key='last_name' label='last name' direct=true
                                 +text_view key='address' label='address' direct=true
-                                +number_view key='unit_number' label='unit #' direct=true
-                                +number_view key='building_number' label='building #' direct=true
-                                //- +text_view key='building_code' label='building code' direct=true
-                                +number_view key='healthclub_code' label='keycard code' icon='barcode' direct=true
-                                +date_view key='start_date' label='start date' direct=true
-                                +boolean_view key='owner' label='owner' direct=true
-                                //- if user_is_owner
-                                //-     +image_view key='ownership_paperwork' label='ownership paperwork' direct=true
-                                //-     +pdf_view key='lease_agreement' label='lease agreement' direct=true
-                                //- else if user_is_resident
-                                //-     +date_view key='expiration_date' label='expiration date' direct=true
-                                //-     +pdf_view key='lease_agreement' label='lease agreement' direct=true
-                                //-     +pdf_edit key='lease_addendum' label='lease addendum' direct=true
-                                //- +pdf_view key='member_guidelines_and_waiver' label='lease agreement' direct=true
-                        //- +text_edit key='email' label='email' direct=true
                         +phone_edit key='phone' label='phone' icon='telephone' direct=true
-                        //- +image_edit key='banner_image_id' label='banner image' direct=true
-                        //- +text_edit key='tagline' label='tag line' direct=true
+                        +image_edit key='banner_image_id' label='banner image' direct=true
+                        +text_edit key='tagline' label='tag line' direct=true
                         
-                        //- if is_resident
-                        //-     if is_staff
-                        //-         +array_edit key='tags' label='tags' direct=true
+                        +array_edit key='tags' label='tags' direct=true
                 .column
-                    if user_is_resident_or_owner
-                        unless owner
-                            if is_staff
-                                .ui.segment
-                                    +i name='home' classes='ui inline mini image'
-                                    .ui.inline.header residency
-                                    .ui.divider
-                                    +pdf_edit key='lease_agreement' label='lease agreement (pdf)' icon='clipboard' direct=true
-                                    .ui.horizontal.divider or
-                                    +image_edit key='lease_agreement' label='lease agreement (image)' icon='picture' direct=true
-                                    +pdf_edit key='lease_addendum' label='lease addendum' icon='clipboard' direct=true
-                                    +date_edit key='start_date' label='start date' icon='calendar' direct=true
-                                    +date_edit key='expiration_date' label='expiration date' icon='calendar minus' direct=true
-                        if owner
-                            if is_staff
-                                .ui.segment
-                                    +i name='rent' classes='ui inline mini image'
-                                    .ui.inline.header owner
-                                    .ui.divider
-                                    +pdf_edit key='ownership_paperwork' label='ownership paperwork (pdf)' icon='pdf' direct=true
-                                    .ui.horizontal.divider or
-                                    +image_edit key='ownership_paperwork' label='ownership paperwork (image)' icon='picture' direct=true
-                            //- .ui.hidden.divider
-                        //- +pdf_edit key='member_guidelines_and_waiver' icon='signature' label='member guidelines and waiver' direct=true
-                        .ui.hidden.divider
-                        +boolean_edit key='active_violations' label='active violations' direct=true
-                        //- if is_staff
-                        //-     //- with user_from_username_param
-                        //-     +boolean_edit key='government_id_checked' label='government id checked' icon='id-verified' direct=true
-                        //-     +single_user_edit key='id_checked_by_staff' label='government id checked by' role_filter='staff' icon='user shield' direct=true
-                        //-     +date_edit key='id_checked_date' label='government id checked date' icon='today' direct=true
-                        //- else
-                        //-     +boolean_view key='government_id_checked' label='government id checked' icon='id-verified' direct=true
-                        //-     +text_view key='id_checked_by_staff' label='government id checked by' role_filter='staff' icon='user shield' direct=true
-                        //-     +date_view key='id_checked_date' label='government id checked date' icon='today' direct=true
-                            //- with user_from_username_param
-                        //- +boolean_edit key='published' icon='eye' label='profile published'
                     //- +payment_methods
-                    +user_tribe_editor    
-                    if is_admin
-                        +user_settings
+                    //- +user_tribe_editor    
+                    +user_settings
                     
                     
 template(name='user_settings')
