--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -10,20 +10,19 @@ template(name='login')
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.large.input(class=login_class)
                     .ui.inline.small.grey.header 
-                        //- +i name='user'
-                        i.user.icon
+                        +i name='user'
                         |username
                     input.username(type='text')
                 .ui.fluid.large.input(class=login_class)
                     .ui.inline.small.grey.header 
-                        i.lock.icon
+                        +i name='lock'
                         | password
                     input.password(type='password')
                 //- if username
                 if logging_in
                     .ui.fluid.big.basic.button.enter(title="login #{username}" class=enter_class)
                         i.sign.in.alternate.icon
-                        //- +i name='enter-2' classes='ui mini inline image'
+                        +i name='enter-2' classes='ui mini inline image'
                         |login
                         | #{username}
                         //- i.right.chevron.icon
@@ -33,14 +32,13 @@ template(name='login')
                             .ui.small.header no '#{username}' user
                             a.ui.basic.button(href='/register')
                                 i.user.plus.icon
-                                //- +i name='enter-2' classes='ui mini inline image'                    
+                                +i name='enter-2' classes='ui mini inline image'                    
                                 | register
                 .ui.center.aligned.basic.segment    
                     a.ui.large.basic.button(href='/forgot_password')
-                        //- +i name='forgot-password' classes='ui mini inline image'                    
-                        i.refresh.icon
+                        +i name='forgot-password' classes='ui mini inline image'                    
                         |forgot password
                     a.ui.large.basic.button(href='/register') 
-                        //- +i name='add-user-male' classes='ui mini inline image'                    
-                        i.user.plus.icon
+                        +i name='add-user-male' classes='ui mini inline image'                    
+                        //- i.user.plus.icon
                         |register
