--- a/components/accounts/register.jade
+++ b/components/accounts/register.jade
@@ -3,7 +3,7 @@ template(name='register')
         .centered.row
             .ten.wide.column
                 .ui.center.aligned.basic.segment
-                    .ui.header gold run online registration
+                    .ui.big.header gro registration
                     //- i.massive.icons
                     //-     i.home.grey.icon
                     //-     i.corner.plus.icon
@@ -11,23 +11,27 @@ template(name='register')
                     h4.ui.center.aligned.header #{message}
                 .ui.fluid.labeled.input(class=login_class)
                     .ui.small.inline.header 
-                        i.user.grey.icon
+                        //- i.user.grey.icon
+                        +i name='user-male'
                         |username
                     input.username(type='text')
                 .ui.fluid.labeled.input(class=login_class)
                     .ui.small.inline.header 
-                        i.lock.grey.icon
+                        +i name='password'
+                        //- i.lock.grey.icon
                         | password
                     input.password(type='password')
                 .ui.fluid.labeled.input(class=login_class)
                     .ui.small.inline.header 
-                        i.lock.grey.icon
+                        +i name='password'
+                        //- i.lock.grey.icon
                         | password again
                     input.password2(type='password')
                 if username
                     if registering
                         .ui.fluid.large.circular.button.enter(class=enter_class)
-                            i.user.plus.icon
+                            //- i.user.plus.icon
+                            +i name='add-user-male' classes='ui inline mini image'
                             |register '#{username}'
                     else
                         .ui.small.header username "#{username}" found
@@ -38,7 +42,8 @@ template(name='register')
                     //- .ui.small.header By clicking Register, you agree to our 
                     //-     a(href='https://henry-health.com/privacy-policy/' target="_window") Privacy Policy
                     .ui.small.header or
-                        a.ui.circular.basic.sign.in.button(href='/login') 
+                        a.ui.large.button(href='/login') 
+                            +i name='enter-2' classes='ui inline mini image'
                             |login
                             i.right.chevron.icon
                     
