--- a/client/nav.jade
+++ b/client/nav.jade
@@ -13,43 +13,29 @@ template(name='nav')
                 a.header.icon.item(href='/' class="{{isActivePath '/'}}")
                     //- i.home.large.large.icon
                     +i name='home-page' classes='ui avatar image'
-                a.icon.item(href='/home' class="{{isActivePath '/home'}}")
-                    i.th.large.icon
-                if is_staff
-                    //- +i name='activity-grid-2' classes='ui avatar image'
-                    a.icon.item(href='/buildings' class="{{isActivePath '/buildings'}}")
-                        +i name='apartment' classes='ui avatar image'
-                        //- i.building.large.icon
-                        .mobile.hidden &nbsp; buildings
-                //- a.header.icon.set_units.item(href='/m/unit' class="{{isActivePath '/m/unit'}}")
-                //-     +i name='room'    
-                a.icon.item(href='/users' class="{{isActivePath '/users'}}")
-                    //- i.users.large.icon
-                    +i name='groups' classes='ui avatar image'
-                    .mobile.hidden &nbsp; users
-                a.item(href='/meals' class="{{isActivePath '/meals'}}" title='meals')
-                    +i name='food'
-                    .mobile.hidden &nbsp; meals
                 a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
                     //- i.dashboard.icon
                     +i name='dashboard'
-                    .mobile.hidden &nbsp; dashboard
-                a.item(href='/shop' class="{{isActivePath '/shop'}}")
-                    i.shop.icon
-                    .mobile.hidden &nbsp; shop
-                if is_admin
-                    a.icon.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}")
-                        +i name='shop'
-                        //- i.shop.icon
-                        .mobile.hidden &nbsp; market
-                    //- a.icon.item.set_library(href='/m/library' class="{{isActivePath '/m/library'}}" title='library')
-                    //-     //- +i name='library'
-                    //-     i.library.icon
-                    //-     .mobile.hidden &nbsp; Library
-                    a.icon.item.set_event(href='/m/event' class="{{isActivePath '/m/event'}}" title='events')
-                        +i name='calendar'
+                //- a.icon.item(href='/home' class="{{isActivePath '/home'}}")
+                //-     i.th.large.icon
+                //- a.icon.item(href='/users' class="{{isActivePath '/users'}}")
+                //-     //- i.users.large.icon
+                //-     +i name='groups' classes='ui avatar image'
+                    //- .mobile.hidden &nbsp; users
+                    //- .mobile.hidden &nbsp; dashboard
+                //- if is_admin
+                //-     a.icon.item.set_shop(href='/m/shop' class="{{isActivePath '/m/shop'}}")
+                //-         +i name='shop'
+                //-         //- i.shop.icon
+                //-         //- .mobile.hidden &nbsp; market
+                //-     //- a.icon.item.set_library(href='/m/library' class="{{isActivePath '/m/library'}}" title='library')
+                //-     //-     //- +i name='library'
+                //-     //-     i.library.icon
+                //-     //-     .mobile.hidden &nbsp; Library
+                //-     a.icon.item.set_event(href='/m/event' class="{{isActivePath '/m/event'}}" title='events')
+                //-         +i name='calendar'
                         //- i.calendar.icon
-                        .mobile.hidden &nbsp; events
+                        //- .mobile.hidden &nbsp; events
                     //- a.icon.item.set_meal(href='/m/meal' class="{{isActivePath '/m/meal'}}" title='food')
                     //-     //- +i name='food'
                     //-     i.food.icon
@@ -66,13 +52,6 @@ template(name='nav')
                 //- a.item.set_marketplace(href='/m/marketplace' class="{{isActivePath '/m/marketplace'}}")
                 //-     +i name='shop'
             .right.menu
-                if is_admin
-                    a.icon.item.set_task(href='/m/task' class="{{isActivePath '/m/task'}}")
-                        +i name='tasks'
-                        //- i.tasks.large.icon
-                //-     a.icon.item.set_note(href='/m/note' class="{{isActivePath '/m/note'}}")
-                //-         //- +i name='note'
-                //-         i.rss.large.icon
                 if currentUser
                     //- .item
                     //-     .ui.header(title='your karma') #{currentUser.karma}
@@ -83,11 +62,11 @@ template(name='nav')
                         //-         each notifications
                         //-             .ui.button #{text}
                         if is_user
-                            a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
-                                +i name='new-post'
-                                //- i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
-                            a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
-                                +i name='cashbook'
+                            //- a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
+                            //-     +i name='new-post'
+                            //-     //- i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                            a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
+                                +i name='chat'
                             a.icon.item(href="/my_transactions" class="{{isActivePath '/my_transactions'}}" title='my transactions')
                                 +i name='ledger'
                                 //- i.list.icon
@@ -95,26 +74,11 @@ template(name='nav')
                                 a.icon.item(href="/transactions" class="{{isActivePath '/transactions'}}" title='transactions')
                                     +i name='cashbook'
                                     //- i.user.sheild.icon
-                            a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
-                                +i name='chat'
-                                //- i.chat.icon
                             a.item(href="/credit" class="{{isActivePath '/credit'}}" title="#{currentUser.credit} credit")
                                  +i name='wallet'
-                                 //- i.wallet.icon
                                  |#{currentUser.credit}
-                            a.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
-                                i.cart.icon
-                                |#{cart_amount}
-                            a.icon.item(href="/deliveries" class="{{isActivePath '/deliveries'}}" title='deliveries')
-                                +i name='in-transit'
-                                |deliveries
-                            a.item(href="/tab" class="{{isActivePath '/tab'}}" title='tab')
-                                +i name='shopping-cart'
-                                //- i.cart.icon
-                                |#{cart_amount}
-                            if is_user
-                                a.icon.item(href="/events" class="{{isActivePath '/events'}}")
-                                    +i name='calendar'
+                            //- a.item(href="/cart" class="{{isActivePath '/cart'}}" title='cart')
+                            //-     |#{cart_amount}
                         if is_admin
                             a.icon.item(href='/admin' class="{{isActivePath '/admin'}}")
                                 +i name='user shield'
